add_subdirectory(libc)
add_subdirectory(libcore)
add_subdirectory(libcpp)
add_subdirectory(libcrypt)
add_subdirectory(libcrypto)
add_subdirectory(libdesktop)
add_subdirectory(libdl)
add_subdirectory(libelf)
add_subdirectory(libgfx)
add_subdirectory(libgl)
add_subdirectory(libipc)
add_subdirectory(libjs)
add_subdirectory(libkeyboard)
add_subdirectory(libm)
add_subdirectory(libprotocol)
add_subdirectory(libpthread)
add_subdirectory(libvt)
add_subdirectory(libwasm)
add_subdirectory(libweb)
add_subdirectory(libx86)
