[package]
name = "libbrush"
version = "0.1.0"
edition = "2021"
description = "2D text render"

[dependencies]
wgpu = "25.0.0"
glyph_brush = "0.7.12"
log = "0.4.27"
bytemuck = { version = "1.22.0", features = ["derive"] }

[dev-dependencies]
wgpu = { version = "25.0.0", features = ["spirv"] }
winit = "0.30.9"
pollster = "0.4.0"
env_logger = "0.11.8"
rand = "0.9.0"
nalgebra = "0.33.2"


[workspace]
resolver = "2"
members = ["rasterizer"]

[profile.bench]
lto = "thin"
